src/styles/globals.css
:root {
	--max-width: 1100px;
	--border-radius: 12px;
	--font-mono:
		ui-monospace,
		menlo,
		monaco,
		"Cascadia Mono",
		"Segoe UI Mono",
		"Roboto Mono",
		"Oxygen Mono",
		"Ubuntu Monospace",
		"Source Code Pro",
		"Fira Mono",
		"Droid Sans Mono",
		"Courier New",
		monospace;
	--foreground-rgb: 0, 0, 0;
	--background-rgb: 255, 255, 255;
}

* {
	box-sizing: border-box;
	padding: 0;
	margin: 0;
}

html,
body {
	max-width: 100vw;
	overflow-x: hidden;
}

body {
	color: rgb(var(--foreground-rgb));
	background: rgb(var(--background-rgb));
	font-family: "Roboto Serif", serif;
	font-weight: 200;
	font-size: 15px;
}

a {
	color: inherit;
	text-decoration: none;
	cursor: pointer;
}

ul {
	list-style: none;
}

@keyframes blink-animation {
	50% {
		visibility: visible;
	}
}

@keyframes workspace {
	from {
		filter: brightness(100%);
	}

	to {
		filter: brightness(0%);
	}
}

@keyframes horizontal-scroll {
	from {
		object-position: 80% 100%;
	}

	to {
		object-position: 30% 100%;
	}
}

